--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,6 +18,7 @@
   from {
     transform: translateY(-100%);
   }
+
   to {
     transform: translateY(0);
   }
@@ -27,6 +28,7 @@
   from {
     transform: translateY(100%);
   }
+
   to {
     transform: translateY(0);
   }
@@ -38,13 +40,4 @@
 
 .animateOut {
   animation: animateOut 0.4s ease-out forwards;
-}
-
-.link {
-  text-decoration: none;
-  color: #171219;
-}
-
-.link:hover {
-  color: #2c2c91;
 }
